[package]
name = "tcc-live-capture"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.2"
reqwest = "0.12.24"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2", features = ["sqlite", "postgres", "returning_clauses_for_sqlite_3_35", "r2d2"] }
dotenv = "0.15"
serde_json = "1.0"
