[package]
name = "tcc_live_lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
regex = "1.12.2"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = "2"
dotenv = "0.15"
serde_json = "1.0"
